fix js on md code block and default theme flickering

--- a/examples/themes/default/public/css/default.css
+++ b/examples/themes/default/public/css/default.css
@@ -2,6 +2,10 @@ html, body {
   background-color: #E8EBEF;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 header {
   width: 940px;
   margin: 20px auto 30px;
